--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,16 @@ h2 {
   );
 }
 
+h1 a, h2 a {
+  color: #101010;
+  transition: color 750ms, text-decoration-color 500ms;
+}
+
+h1 a:hover, h2 a:hover {
+  text-decoration-color: transparent;
+  color: plum;
+}
+
 nav,
 footer {
   display: flex;
@@ -49,8 +59,9 @@ nav a,
 footer a,
 .post a,
 .blog-post a {
-  text-decoration: none;
+  text-decoration-color: transparent;
   color: #101010;
+  transition: text-decoration-color 500ms;
 }
 
 nav ul a:hover,
@@ -61,7 +72,7 @@ footer a.active,
 .blog-post a:hover {
   text-underline-offset: 3px;
   text-decoration-skip-ink: auto;
-  text-decoration: underline;
+  text-decoration-color: #101010;
 }
 
 nav ul {
@@ -116,6 +127,7 @@ nav ul {
   background-color: whitesmoke;
   border-radius: 100px;
   padding: 5px 20px;
+  transition: background-color 500ms;
 }
 
 .new-btn:hover,
