--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,29 +9,30 @@ body {
   height: 100vh;
 }
 
-h1,
-h2 {
-  --fluid-type-min: 2.5rem;
-  --fluid-type-max: 5rem;
-  --fluid-type-target: 6vw;
-
+h2,
+h3 {
   font-family: 'Inter', sans-serif;
+
   font-weight: 600;
   letter-spacing: -2px;
   line-height: 1.1;
-  font-size: clamp(
-    var(--fluid-type-min, 1rem),
-    calc(1rem + var(--fluid-type-target, 3vw)),
-    var(--fluid-type-max, 1.3rem)
-  );
+  font-size: clamp(2rem, calc(2rem + 3vw), 5rem);
+}
+h1, h3 {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: clamp(1rem, calc(1rem + 3vw), 2rem);
 }
 
-h1 a, h2 a {
+h1 a,
+h2 a,
+h3 a {
   color: #101010;
   transition: color 750ms, text-decoration-color 500ms;
 }
 
-h1 a:hover, h2 a:hover {
+h1 a:hover,
+h2 a:hover,
+h3 a:hover {
   text-decoration-color: transparent;
   color: plum;
 }
@@ -111,7 +112,7 @@ nav ul {
   display: flex;
   gap: 20px;
   align-items: center;
-  font-size: clamp(1rem, calc(1rem + 1vw), 2rem);
+  font-size: clamp(1rem, calc(1rem + 1vw), 1.5rem);
   text-decoration: none;
   color: #101010;
   margin-bottom: 2rem;
@@ -160,9 +161,9 @@ nav ul {
   border-radius: 15px;
   padding: 15px;
 
-  -webkit-box-shadow:0px 0px 60px 2px rgba(246,255,117,0.25);
-  -moz-box-shadow: 0px 0px 60px 2px rgba(246,255,117,0.25);
-  box-shadow: 0px 0px 60px 2px rgba(246,255,117,0.25);
+  -webkit-box-shadow: 0px 0px 60px 2px rgba(246, 255, 117, 0.25);
+  -moz-box-shadow: 0px 0px 60px 2px rgba(246, 255, 117, 0.25);
+  box-shadow: 0px 0px 60px 2px rgba(246, 255, 117, 0.25);
 }
 
 @media (max-width: 600px) {
@@ -214,4 +215,18 @@ nav ul {
 
 .date {
   text-align: right;
+}
+
+.main-body {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.logo {
+  transition: color 1s;
+}
+
+.logo:hover {
+  color: plum;
 }
