--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,33 @@ body {
   color: #101010;
   background: linear-gradient(-30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 600% 600%;
-  animation: gradient 15s ease infinite;
   height: 100vh;
+  -webkit-animation: gradient 15s ease infinite;
+  animation: gradient 15s ease infinite;
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 h2,
@@ -18,7 +43,8 @@ h3 {
   line-height: 1.1;
   font-size: clamp(2rem, calc(2rem + 3vw), 5rem);
 }
-h1, h3 {
+h1,
+h3 {
   font-family: 'Space Grotesk', sans-serif;
   font-size: clamp(1rem, calc(1rem + 3vw), 2rem);
 }
@@ -94,18 +120,6 @@ nav ul {
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-@keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
 }
 
 .new {
